[project]
name = "dracula_vs_van_helsing"
version = "0.1.0"
description = "Dracula vs. Van Helsing game board"
authors = [
    {name = "Majid Shajari",email = "shijarpy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
